--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ default: &default
   timeout: 5000
 
 development:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: utf8
   database: listeasyIII_development
   host: localhost
